versions/v2.11/modules/en/pages/observability/istio/configuration/configuration.adoc
= Configuration Options
:page-languages: [en, zh]
:revdate: 2025-08-18
:page-revdate: {revdate}
:page-community-path: integrations-in-rancher/istio/configuration-options/index.adoc 
:page-product-path: observability/istio/configuration/configuration.adoc
ifeval::["{build-type}" != "community"]
:xref-selectors-and-scrape-configurations: xref:observability/istio/configuration/selectors-and-scrape-configurations.adoc
:xref-istio-on-rke2: xref:observability/istio/configuration/install-istio-on-rke2-cluster.adoc
:xref-istio-project-network-isolation: xref:observability/istio/configuration/project-network-isolation.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-selectors-and-scrape-configurations: xref:integrations-in-rancher/istio/configuration-options/selectors-and-scrape-configurations.adoc
:xref-istio-on-rke2: xref:integrations-in-rancher/istio/configuration-options/install-istio-on-rke2-cluster.adoc
:xref-istio-project-network-isolation: xref:integrations-in-rancher/istio/configuration-options/project-network-isolation.adoc
endif::[]

[WARNING]
====
https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
====

== Egress Support

By default the Egress gateway is disabled, but can be enabled on install or upgrade through the values.yaml or via the <<_overlay_file,overlay file>>.

== Enabling Automatic Sidecar Injection

Automatic sidecar injection is disabled by default. To enable this, set the `sidecarInjectorWebhook.enableNamespacesByDefault=true` in the values.yaml on install or upgrade. This automatically enables Istio sidecar injection into all new namespaces that are deployed.

== Overlay File

An Overlay File is designed to support extensive configuration of your Istio installation. It allows you to make changes to any values available in the https://istio.io/latest/docs/reference/config/istio.operator.v1alpha1/[IstioOperator API]. This will ensure you can customize the default installation to fit any scenario.

The Overlay File will add configuration on top of the default installation that is provided from the Istio chart installation. This means you do not need to redefine the components that already defined for installation.

For more information on Overlay Files, refer to the https://istio.io/latest/docs/setup/install/istioctl/#configure-component-settings[Istio documentation.]

== Selectors and Scrape Configs

The Monitoring app sets `prometheus.prometheusSpec.ignoreNamespaceSelectors=false` which enables monitoring across all namespaces by default. This ensures you can view traffic, metrics and graphs for resources deployed in a namespace with `istio-injection=enabled` label.

If you would like to limit Prometheus to specific namespaces, set `prometheus.prometheusSpec.ignoreNamespaceSelectors=true`. Once you do this, you must perform some additional configuration to continue to monitor your resources.

For details, refer to {xref-selectors-and-scrape-configurations}[this section.]

== Additional Steps for Installing Istio on an {rke2-product-name} Cluster

Refer to {xref-istio-on-rke2}[this section.]

== Additional Steps for Project Network Isolation

Refer to {xref-istio-project-network-isolation}[this section.]
